# gvpm

./: .gitignore  CMakeLists.txt  README.md  replicability_instructions.htm
data/cmake/: FindGLEW.cmake  MitsubaBuildOptions.cmake  MitsubaExternal.cmake
include/mitsuba/bidir/: edge.h  manifold.h  mut_manifold.h  path.h  vertex.h
include/mitsuba/render/: medium.h  particleproc.h
scripts/: run.py
scripts/other/: combine.py  combine_curves.py  impShow.py  renderStats.py  tonemap.py  zip_all.py
scripts/results/: computeSpeedup.py  generateFigures.py  msetools.py  paperplot.py  paperplot_laser.py  paperplot_nullshift.py  paperplot_size.py  rules.xml  run_mse.py
scripts/results/data/: html_gvpm.xml  html_gvpm_auto.xml  html_gvpm_laser.xml
scripts/rgbe/: .gitignore  CMakeLists.txt  setup.py
scripts/rgbe/rgbe/: .gitignore  merge.py  utils.py
scripts/rgbe/sources/: config.h  fast.cpp  imageerrors.h  io.cpp
scripts/rgbe/sources/format/: format.h  pfm.h  rgbe.h
scripts/rgbe/tests/: .gitignore  compare.hdr  img2.hdr  mse.py  myCave_Frame0.hdr  ref.hdr  rgbe  test.hdr  test_hdr.py  weight.py
scripts/run/: run_batch.py
scripts/scene/: clean_scene.sh  generate_scene.sh  generatorGPM.py  generatorGVPM.py
scripts/scene/bsdf/: generate_bsdf.sh  generate_bsdf_scene.py  rename_bsdf_ref.sh
scripts/scene/igrida/: transform-igrida.py
src/bsdfs/: mixturebsdf.cpp  phong.cpp  plastic.cpp  roughplastic.cpp  twosided.cpp
src/integrators/: .gitignore  CMakeLists.txt  SConscript  volume_utils.h
src/integrators/bdpt/: bdpt.cpp  (+2 more)
src/libbidir/: .gitignore  edge.cpp  manifold.cpp  mut_manifold.cpp  path.cpp  vertex.cpp
src/librender/: integrator.cpp  photonmap.cpp
src/medium/: heterogeneous.cpp  homogeneous.cpp
(+47 files in other folders)
